# graphrag-notes

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  config.toml  docker-compose.yml  setup.sh  update_librarian.py
.cargo/: config.toml
.github/workflows/: rust-ci.yml
crates/agents/: Cargo.toml
crates/agents/src/: error.rs  gardener.rs  inference.rs  lib.rs  librarian.rs  ml_client.rs  search.rs
crates/agents/tests/: integration_test.rs
crates/agents/tests/common/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: chat_export.rs  edge.rs  entity.rs  error.rs  lib.rs  note.rs  source.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  repository.rs  schema.rs
docker/tei/: Dockerfile
docker/tei-gpu/: Dockerfile
python/: pyproject.toml
python/src/ml_worker/: __init__.py  embeddings.py  entities.py  server.py
python/tests/: test_ml_worker.py
tests/: augment-eval-sample.jsonl  integration_test.rs  phase7-validation.sh
tests/common/: mod.rs
