[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/agents",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hunter"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# SurrealDB
surrealdb = { version = "2.2", features = ["kv-rocksdb", "kv-mem"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Python worker
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
