[package]
name = "graphrag-db"
version.workspace = true
edition = "2021"

[dependencies]
graphrag-core = { path = "../core" }

surrealdb.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
