[package]
name = "graphrag-db"
version.workspace = true
edition = "2021"

[features]
default = ["rocksdb"]
rocksdb = ["surrealdb/kv-rocksdb"]

[dependencies]
graphrag-core = { path = "../core" }

surrealdb = { workspace = true, default-features = false, features = ["kv-mem"] }
surrealdb-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
